# validation_code

./: README.md
fetch_ride_mode/: Cargo.toml
fetch_ride_mode/src/: main.rs  rdbc.rs
field_validator/: Cargo.toml
field_validator/src/: lib.rs  validate.rs
field_validator_derive/: Cargo.toml
field_validator_derive/src/: lib.rs
