[package]
name = "fetch_ride_mode"
version = "0.1.0"
edition = "2021"

[dependencies]
lambda_runtime = {workspace = true}
serde = {workspace = true}
aws-sdk-iotdataplane = {workspace = true}
aws-sdk-dynamodb = {workspace = true}
aws-config = "0.54.1"
aws-sdk-sns= {workspace = true}
serde_json= {workspace = true}
tokio = {workspace = true}
reqwest ={workspace = true}
openssl ={workspace = true}
http = {workspace = true}
tokio-stream = {workspace = true}
redis_rs = {workspace = true}
chrono = {workspace = true}
redis = {workspace = true}\
// add these two to the cargo.toml of the code or the workspace 
field_validator = { path = "../field_validator" }
field_validator_derive = { path = "../field_validator_derive" }
